# PharmExtract_minimal

./: .dockerignore  .gitignore  .prettierrc.json  Dockerfile  README.md  cache_manager.py  env.list.example  flow.md  main.py  prompt_instruction.py  prompt_lib.py  pyproject.toml  report_examples.py  run_docker.sh  run_local.sh  sanitize.py  social_sharing.py  start.sh  structure_report.py  test_app.py  test_validation.py  view_logs_endpoint.py
cache/: sample_cache.json
new_data/: prompt_instruction.py  report_examples.py
static/: copy.js  reset.js  sample_reports.json  script.js  style.css
templates/: index.html
tools/: rebuild_cache.py
